--- a/rocro.yml
+++ b/rocro.yml
@@ -1,7 +1,7 @@
 inspecode:
   experimental:
     base-jobs:
-        main: 1840
+        check-issue-migrate: 5
   fossid: default
   
 # Update 2023/05/16 15:
